Fixes for FF and long slide alignment.

--- a/src/less/core/page/slide/slide.less
+++ b/src/less/core/page/slide/slide.less
@@ -2,12 +2,11 @@ web-slide {
   display: flex;
   position: relative;
   flex-direction: column;
-  justify-content: center;
 
   font: inherit;
   font-size: 100%;
 
-  height: 400px; // for proper calculations
+ // height: 100vh; // for proper calculations
   min-height: 100vh;
 
   page-break-after: always;
@@ -48,8 +47,7 @@ web-slide {
   width: 100%;
   max-width: 100%;
 
-  margin-left: auto;
-  margin-right: auto;
+  margin: auto;
 
   z-index: 2;
 
